--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
     display:flex;
-    background-color: cadetblue;
+    /* background-color: violet; */
     flex-direction: column;
 }
 
@@ -17,5 +17,17 @@ h2{
 }
 
 #searchBtn{
-    background-color: greenyellow;
+    background-color: lightblue;
+}
+
+embed{
+    width: 10%;
+    margin: 5px;
+}
+
+
+#searchResults{
+    background-color: blue;
+    /* margin: 10px */
+    margin: 10px 10px 10px 10px;
 }
