--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
     display:flex;
-    /* background-color: violet; */
+    background-color: violet;
     flex-direction: column;
 }
 
@@ -8,7 +8,8 @@ body{
     display:flex;
     flex-direction: column;
     background-color: antiquewhite;
-    margin:auto;
+    margin: auto;
+    margin-top: 10%;
 }
 
 h2{
@@ -21,13 +22,12 @@ h2{
 }
 
 embed{
-    width: 10%;
+    width: 19%;
     margin: 5px;
 }
 
 
 #searchResults{
     background-color: blue;
-    /* margin: 10px */
     margin: 10px 10px 10px 10px;
 }
