delete commented section

--- a/petra.css
+++ b/petra.css
@@ -5,7 +5,7 @@
 :root {
     --primary-color: rgb(97, 2, 97);
     --secondary-color: navy;
-    --text-coolor
+    --text-color: pink;
 }
 
 .container {
