--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,10 @@ body {
     margin:0;
     padding:0;
     overflow-x:hidden;
-    border-right-style:solid;
-    border-left-style:solid;
-    border-width: 8px;
-    border-color: lightskyblue;
 }
 
 /* Adjusts the font of "Aesthetic Search Engine" is adjusted as well as the background color of the header section*/
-.header {
+header {
     display:flex;
     justify-content: flex-start;
     padding-left: 25px;
@@ -21,26 +17,25 @@ body {
 }
 
 /* Adjusts where the spacing between the hero images is adjusted as well as the bottom border under them.*/
-.hero {
+.banner {
     display:flex;
     justify-content: space-evenly;
+    border-right-style:solid;
+    border-left-style:solid;
     border-bottom-style:solid;
     border-width: 8px;
     border-color: lightskyblue;
+    margin-bottom: 10px;
+    height: 200px;
 }
 
-/* Adjusts the border to the left and right of each image in the hero banner.*/
-.hero img {
+/* Adjusts the border to the left and right of each image in the banner.*/
+.banner img {
     border-right-style:solid;
     border-left-style:solid;
     border-width: 8px;
     border-color: lightskyblue;
 }
-
-/* This is where the main content of the page will be adjusted and fit onto the rest of the page when it's ready.
-.content {
-    display:flex;
-} */
 
 /* Styling for  Search Area */
 .container {
@@ -54,16 +49,23 @@ body {
     flex-direction: column;
 }
 
+/* Adjusts the font size of h2 Aesthetic Search Engine in containter.*/
 .container h2 {
     font-size: 30px;
 }
 
+/* Adjusts the font size and color of the input and select elements. Also puts some spacing between their boxes.*/
 .container input, select {
     font-size: 25px;
     background-color: lavenderblush;
     color: lightskyblue;
     padding: 10px 0;
     margin: 10px 0;
+}
+
+/* Adjusts the font color of the placeholder text*/
+::placeholder {
+    color: lightskyblue;
 }
 /* Search Button styling */
 #searchBtn {
@@ -85,16 +87,18 @@ embed {
 }
 
 /* Adjusts the background color of the footer section and sets its contents toward the end of the footer.*/
-.footer {
+footer {
     display:flex;
-    justify-content: flex-end;
     background-color: lightskyblue;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
 }
 
 /* Centers the contents of the footer from the top and bottom.*/
-.footer .footer-right {
+footer .footer-right {
     display:flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items:center;
 }
 
@@ -111,6 +115,3 @@ embed {
     font-weight: 550;
 }
 
-/*do I need this to use Bulma?
-@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-*/
