Underfooter changed position absolute to position fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ embed {
 footer {
     display:flex;
     background-color: lightskyblue;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     width: 100%;
 }
